fix: change logo

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <title>CentralPay - Test</title>
+    <title>MeTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
